Fix ion-anchors not wrapping on overflow

--- a/stylus/base/util.styl
+++ b/stylus/base/util.styl
@@ -5,6 +5,7 @@
 .ion-anchor {
 	color: util.anchor-color;
 	text-decoration: none;
+	overflow-wrap: break-word;
 }
 
 .ion-circle {
